@@ -44,6 +44,8 @@ Changes log
           Reported by Schley Andrew Kutz.
         - Fixed OSGi imports for org.restlet.ext.xml.
           Reported by Nicolas Janicaud.
+        - Fixed potential NPE in ComponentHelper#checkVirtualHost.
+          Reported by Matt J. Watson.
      - Enhancements
         - Upgraded Jetty library to version 6.1.18.
         - SpringServerServlet nows gets its component fully configured,
